syntax = "proto3";

package sonr.protocols.transfer;
import "proto/common/core.proto";
import "proto/common/data.proto";
option go_package = "github.com/sonr-io/core/pkg/transfer";

// Invitation Message sent on RPC
message InviteRequest {
  sonr.core.Payload payload = 1;   // Attached Data
  string uuid = 2;                 // Invitation ID (UUID) signed by the sender
  sonr.core.Peer from = 3;         // Users Peer Data
  sonr.core.Peer to = 4;           // Receivers Peer Data
  sonr.core.Metadata metadata = 5; // Metadata
}

// Reply Message sent on RPC
message InviteResponse {
  bool decision = 1;               // Success
  string uuid = 2;                 // Invitation ID (UUID) signed by the sender
  sonr.core.Peer from = 3;         // Users Peer Data
  sonr.core.Peer to = 4;           // Receivers Peer Data
  sonr.core.Metadata metadata = 5; // Metadata
}
